--- a/SQL Module (Lecture and other)/1.PostgreSQL.md
+++ b/SQL Module (Lecture and other)/1.PostgreSQL.md
@@ -2,10 +2,21 @@
 
 1) Тема типы данных 
 
-| Название          | Тип данных     | Bytes            | Description                | Range                                   |
-|-------------------|----------------|------------------|----------------------------|-----------------------------------------|
-| Integral numbers  | smallint       | 2                | small-range int            | 2**16 ---> -32768 to 32767              |
-| Integral numbers  | integer        | 4                | typical choise for integers | 2**32 ---> -2.147.483.647o 2.14.483.647 |
-| Integral numbers  | bigint         | 8                | large_range integer        |
-| str               | Строка         |  |
-| bool              | Логический тип |     |
+| Type name        | Type in sql             | Bytes | Description                          | Range                                  |
+|------------------|-------------------------|-------|--------------------------------------|----------------------------------------|
+| Integral numbers | smallint                | 2     | small-range int                      | 2^16 ---> -32768 to 32767              |
+| Integral numbers | integer                 | 4     | typical choise for integers          | 2^32 ---> -2.147.483.647o 2.14.483.647 |
+| Integral numbers | bigint                  | 8     | large_range integer                  | 2^64 --->                              |
+| Real numbers     | decimal/numeric         | var   | user-specified precision, exact      | - 3.4 * 10^38 to + 3.4 * 10^38         |
+| Real numbers     | real/float4             | 4     | user-specified precision, exact      | 6 decimal (6 знаков после запятой)     |
+| Real numbers     | double precision/float8 | 8     | user-speified precision, inexact     | 15 decimal                             | 
+| Integral Numbers | smallserial             | 2     | autoincrementing small-range integer | 1 to 32.767                            |  
+| Integral Numbers | serial                  | 4     | autoincrementing mid-range integer   | 1 to 2.147.483.647                     |                   |
+| Integral Numbers | serial                  | 4     | autoincrementing mid-range integer   | 1 to 2.147.483.647                     |
+| Integral Numbers | serial                  | 4     | autoincrementing mid-range integer   | 1 to 2.147.483.647                     |
+| Integral Numbers | serial                  | 4     | autoincrementing mid-range integer   | 1 to 2.147.483.647                     |
+```
+var - variable (может варьироваться)
+* decimal(numeric) - точные расчеты (денежные значения)
+
+```
