--- a/Book and Lecture Good/02 TH .md
+++ b/Book and Lecture Good/02 TH .md
@@ -252,11 +252,66 @@ p = 35*36**3 + 14*36**2 +(ord('R')-ord('A')+10)*36 + (ord('O')-ord('A')+10)
 ```
 ### Конкатенация
 ```python
-A = [1, 2, 3, 4, 5, 3, 2, 1]
+A = [1, 2, 3, 4, 5]
 B = [3, 2, 1]
 print(A + B) # [1, 2, 3, 4, 5, 3, 2, 1]
 print(B + A) # [3, 2, 1, 1, 2, 3, 4, 5]
 str_1 = "asdf"
 str_2 = "qwer"
 print(str_1 + str_2) # ['asdfqwer']
+```
+
+### Умножение в list 
+Если мы захотим умножить A * B, у нас ничего не выйдет
+```python
+A = [1, 2, 3, 4, 5]
+print(A * 2) # [1, 2, 3, 4, 5, 1, 2, 3, 4, 5]
+A = [0] * 100
+print(A)  # Cписок из 100 нулей [0,0,0,0 ... ,0]
+len[A] # 100
+```
+
+```python
+A = [0] * 100
+for i in range(len(A)):
+    A[i] = i ** 2
+print(A)
+```
+
+### Добавления в списки Python (.append)
+```python
+B = [3, 2, 1]
+B.append(4)
+print(B) # [3, 2, 1, 4]
+B.append(5)
+B.append(6)
+print(B) # [3, 2, 1, 4, 5, 6]
+```
+
+### Вставка элемента в список Python
+```python
+B = [3, 2, 1]
+B.insert(0, 100)
+B.append(B) # [100, 3, 2, 1] <--- элемент сдвигает весь список на 1 
+```
+
+### Список в списке
+Самое главное, что список в списке, не является двумерным массивом!
+```python
+A = [[1,2,3], [4,5,6], [7,8,9]]
+
+for i in range(len(A)):
+    for k in range(len(A[i])):
+        print(( A[i])[k], end=' ')
+    print()
+```
+Это эмуляция двумерного массива и вот почему:
+
+```python
+A = [1, 2, 3] * 3
+print(A) # [[1,2,3] , [1,2,3], [1,2,3]] 
+print(id (A[0]) == id(A[1])) # True
+print(A[0] is A[1]) # True 
+A[0][0] = 100 
+print(A) # [[100,2,3],[100,2,3],[100,2,3]] <----- получается это лишь ссылки
 ```
